Hiding the .php extension with Apache mod_rewrite

--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,5 @@
-ErrorDocument 404 /WebIMS/pages/404.php
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME}\.php -f
+RewriteRule ^([^\.]+)$ $1.php [L]
+
+ErrorDocument 404 /WebIMS/pages/404
